--- a/Task_1_1_1/build.gradle
+++ b/Task_1_1_1/build.gradle
@@ -11,8 +11,9 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
+    testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
@@ -20,7 +21,18 @@ test {
 }
 
 jacocoTestReport {
+    dependsOn test
     reports {
         xml.required = true
     }
+}
+
+tasks.register('ciMirrorJacoco', Copy) {
+    dependsOn 'jacocoTestReport'
+    from(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
+    into new File(rootProject.rootDir, "task_1_1_1/build/reports/jacoco/test")
+}
+
+tasks.named('build') {
+    finalizedBy 'ciMirrorJacoco'
 }
