--- a/OOP/Task_1_1_1/build.gradle
+++ b/OOP/Task_1_1_1/build.gradle
@@ -21,7 +21,30 @@ test {
 }
 
 jacocoTestReport {
+    dependsOn test
     reports {
         xml.required = true
+        html.required = true
     }
+}
+
+tasks.register('ciMirrorJacocoRoot', Copy) {
+    dependsOn 'jacocoTestReport'
+    from(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
+    into new File(rootProject.rootDir, "task_1_1_1/build/reports/jacoco/test")
+}
+
+tasks.register('ciMirrorJacocoOOP', Copy) {
+    dependsOn 'jacocoTestReport'
+    from(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
+    into new File(rootProject.rootDir, "OOP/task_1_1_1/build/reports/jacoco/test")
+}
+
+tasks.named('build') {
+    finalizedBy 'ciMirrorJacocoRoot', 'ciMirrorJacocoOOP'
+}
+
+tasks.withType(Javadoc).configureEach {
+    options.addBooleanOption('Xdoclint:none', true)
+    options.addStringOption('encoding','UTF-8')
 }
