--- a/Task_1_1_1/build.gradle
+++ b/Task_1_1_1/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'jacoco'
 }
 
-group = 'org.example'
+group = 'ru.nsu.shadrina'
 version = '1.0-SNAPSHOT'
 
 repositories {
@@ -11,9 +11,8 @@ repositories {
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
+    testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
@@ -21,30 +20,7 @@ test {
 }
 
 jacocoTestReport {
-    dependsOn test
     reports {
         xml.required = true
-        html.required = true
     }
-}
-
-tasks.register('ciMirrorJacocoRoot', Copy) {
-    dependsOn 'jacocoTestReport'
-    from(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
-    into new File(rootProject.rootDir, "task_1_1_1/build/reports/jacoco/test")
-}
-
-tasks.register('ciMirrorJacocoOOP', Copy) {
-    dependsOn 'jacocoTestReport'
-    from(layout.buildDirectory.file("reports/jacoco/test/jacocoTestReport.xml"))
-    into new File(rootProject.rootDir, "OOP/task_1_1_1/build/reports/jacoco/test")
-}
-
-tasks.named('build') {
-    finalizedBy 'ciMirrorJacocoRoot', 'ciMirrorJacocoOOP'
-}
-
-tasks.withType(Javadoc).configureEach {
-    options.addBooleanOption('Xdoclint:none', true)
-    options.addStringOption('encoding','UTF-8')
 }
