tests fix attempt 3

--- a/Task_1_1_1/build.gradle
+++ b/Task_1_1_1/build.gradle
@@ -27,3 +27,8 @@ jacocoTestReport {
         html.required = true
     }
 }
+
+tasks.named("build") {
+    dependsOn("test")
+    finalizedBy("jacocoTestReport")
+}
