reviewdog last chages

--- a/Task_1_1_2/build.gradle
+++ b/Task_1_1_2/build.gradle
@@ -23,3 +23,16 @@ test {
     useJUnitPlatform()
     systemProperty 'file.encoding', 'UTF-8'
 }
+
+jacoco {
+    toolVersion = '0.8.11'
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.required = true
+        html.required = true
+        csv.required = false
+    }
+}
