--- a/Task_1_1_3/build.gradle
+++ b/Task_1_1_3/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group = 'org.example'
@@ -15,6 +16,14 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+}
 test {
     useJUnitPlatform()
+    systemProperty 'file.encoding', 'UTF-8'
+}
+
+jacoco {
+    toolVersion = '0.8.11'
 }
